# autonomous_exam_proctoring_robot

./: .gitignore  readme.md  rebuild.sh
AEP_Robot/: CMakeLists.txt
AEP_Robot/config/: joint_names_AEP_Robot.yaml
AEP_Robot/meshes/: front_castor_body_link.STL  left_wheel_link.STL
AEP_Robot/urdf/: AEP_Robot.csv  AEP_Robot.urdf
cad/: MotorAssem.SLDASM  MotorMount.SLDPRT  RobotAssem.SLDASM  Wheel.SLDPRT  base.SLDPRT  battery.SLDPRT  body.SLDPRT  motor-ch-36gp-555.stp  rplidar_main.SLDPRT
cad/CASTER WHEEL (2 inch) ASSY/: 2 inch  WHEEL (FIXED) ASSY 2.SLDASM  2 inch  WHEEL (SWIVEL) without BRAKES  ASSY.SLDASM  2 inch  WHEEL BASE (SWIVEL) without BRAKES.SLDPRT  2 inch  WHEEL UPPER BASE (SWIVEL) with BRAKES.SLDPRT  2 inch  WHEEL UPPER BASE 2.SLDPRT  2 inch  WHEEL.SLDPRT  M12  STUD BOLT.SLDPRT
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/rviz/: AEP_Robot.rviz
src/robot_description/launch/: disp_xac_gaz.launch.py  display_gazebo.launch.py  display_rviz2.launch.py
src/robot_description/meshes/: back_castor_wheel_link.STL  base_link.STL  front_castor_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
src/robot_description/urdf/: AEP_Robot.csv  AEP_Robot.urdf  AEP_Robot_macro.urdf.xacro  main.urdf.xacro
src/robot_nav/: CMakeLists.txt  package.xml
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/worlds/: classroom.sdf
src/robot_slam/: CMakeLists.txt  package.xml
urdf_export/AEP_Robot/: package.xml
urdf_export/AEP_Robot/launch/: display.launch  gazebo.launch
urdf_export/AEP_Robot/meshes/: back_castor_body_link.STL  back_castor_wheel_link.STL  base_link.STL  front_castor_body_link.STL  front_castor_wheel_link.STL  lidar_link.STL  right_wheel_link.STL
urdf_export/AEP_Robot/urdf/: AEP_Robot.csv  AEP_Robot.urdf
