<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>Top-level bringup: RViz, Gazebo, EKF, SLAM, Nav2</description>
  <maintainer email="kimpdroids@gmail.com">KIMP_Droids</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_description</depend>
  <depend>robot_sim</depend>
  <depend>robot_nav</depend>
  <depend>robot_slam</depend>
  <depend>robot_localization</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
